Implement default-off protobuf container transport
